tests/models/enum/unnamed/i128/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value(
       #[field(validate = validate_fn)]
        i128
    ),
}
fn main() {}
